force-app/main/default/objects/Opportunity/fields/Customer_Notified_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notified_Date__c</fullName>
    <description>Date the customer was notified about the upcoming renewal (typically 60 days before the original policy end date).</description>
    <inlineHelpText>Populated when the renewal notification is sent to the customer. Used to track outreach SLA and trigger reminder follow-ups.</inlineHelpText>
    <label>Customer Notified Date</label>
    <type>Date</type>
</CustomField>