force-app/main/default/objects/Opportunity/fields/Insurance_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_End_Date__c</fullName>
    <description>End date of the original Insurance policy. Pulled from Original_Insurance__c for convenience on the Renewal record and in list views.</description>
    <formula>Original_Insurance__r.Insurance_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Read-only — derived from the linked original Insurance policy.</inlineHelpText>
    <label>Insurance End Date</label>
    <type>Date</type>
</CustomField>