force-app/main/default/objects/Opportunity/fields/Original_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Plan_Name__c</fullName>
    <description>Plan name of the original Insurance policy being renewed. Falls back Medical -&gt; Dental -&gt; Vision. Pulled from Original_Insurance__c so it can be merged into Lightning email templates, which cannot traverse lookup relationships.</description>
    <formula>BLANKVALUE(
  Original_Insurance__r.Medical_Plan_Name__c,
  BLANKVALUE(
    Original_Insurance__r.Dental_Plan_Name__c,
    Original_Insurance__r.Vision_Plan_Name__c
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>Read-only — the expiring policy&apos;s plan name, pulled from the linked Original Insurance.</inlineHelpText>
    <label>Original Plan Name</label>
    <type>Text</type>
</CustomField>