force-app/main/default/objects/Opportunity/fields/Original_Premium__c.field-meta.xml
<CustomField>
    <fullName>Original_Premium__c</fullName>
    <description>Premium of the original Insurance policy being renewed. Derived from Original_Insurance__r.Premium__c. Shown on the Renewal page in place of the standard Amount field.</description>
    <formula>Original_Insurance__r.Premium__c</formula>
    <inlineHelpText>Read-only — the expiring policy&apos;s premium, pulled from the linked Original Insurance.</inlineHelpText>
    <label>Original Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>