force-app/main/default/objects/Opportunity/fields/Plan_Change_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Plan_Change_Deadline__c</fullName>
    <description>Deadline for the customer to request a plan change: one month before the renewal takes effect (the day after the original policy ends). Used in the Group Health renewal email template.</description>
    <formula>ADDMONTHS(Original_Insurance__r.Insurance_End_Date__c + 1, -1)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>Read-only — one month before the renewal effective date.</inlineHelpText>
    <label>Plan Change Deadline</label>
    <type>Date</type>
</CustomField>