force-app/main/default/objects/Opportunity/fields/Policy_Holder_Email__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_Email__c</fullName>
    <description>Email address of the policy holder on the original Insurance policy. Flattened onto the Opportunity so the renewal email action can prefill the recipient without traversing the lookup, and so the address is visible on the Renewal record itself.</description>
    <formula>Original_Insurance__r.Policy_Holder__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>Read-only — the policy holder&apos;s email on the linked Original Insurance. Blank means the Contact has no email on file.</inlineHelpText>
    <label>Policy Holder Email</label>
    <type>Text</type>
</CustomField>