force-app/main/default/objects/Opportunity/fields/Policy_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_Name__c</fullName>
    <description>Name of the policy holder on the original Insurance policy. Flattened onto the Opportunity so renewal email templates can merge it without depending on the composer&apos;s To recipient (Recipient merge fields fail whenever no recipient record is attached) and because Lightning templates cannot traverse relationships.</description>
    <formula>TRIM(
  BLANKVALUE(Original_Insurance__r.Policy_Holder__r.FirstName, &apos;&apos;) &amp; &apos; &apos; &amp;
  Original_Insurance__r.Policy_Holder__r.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>Read-only — the policy holder on the linked Original Insurance.</inlineHelpText>
    <label>Policy Holder Name</label>
    <type>Text</type>
</CustomField>