force-app/main/default/objects/Opportunity/fields/Renewal_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Outcome__c</fullName>
    <description>Final outcome of the renewal process. Required when the Opportunity is closed.</description>
    <inlineHelpText>Select the outcome that best describes how the renewal was resolved. Renewed Same Provider and Switched Provider both produce a new Insurance record; Cancelled and Non-Responsive do not.</inlineHelpText>
    <label>Renewal Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewed Same Provider</fullName>
            </value>
            <value>
                <fullName>Switched Provider</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Non-Responsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>