force-app/main/default/objects/Opportunity/fields/Renewed_Premium__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Premium__c</fullName>
    <description>Premium of the new Insurance policy created when this renewal is Closed Won. Derived from New_Insurance__r.Premium__c.</description>
    <formula>New_Insurance__r.Premium__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>Read-only — the renewed policy's premium, pulled from the linked New Insurance (populated when the renewal is Closed Won).</inlineHelpText>
    <label>Renewed Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>