force-app/main/default/objects/Opportunity/recordTypes/Auto_Home_Insurance.recordType-meta.xml
<RecordType>
    <fullName>Auto_Home_Insurance</fullName>
    <active>true</active>
    <businessProcess>Insurance_Renewal_Process</businessProcess>
    <description>Renewal opportunities for Auto/Home insurance policies.</description>
    <label>Auto/Home</label>
</RecordType>