force-app/main/default/objects/Opportunity/recordTypes/Commercial.recordType-meta.xml
<RecordType>
    <fullName>Commercial</fullName>
    <active>true</active>
    <businessProcess>Insurance_Renewal_Process</businessProcess>
    <description>Renewal opportunities for Commercial insurance policies.</description>
    <label>Commercial</label>
</RecordType>