force-app/main/default/objects/Opportunity/recordTypes/Group_Health.recordType-meta.xml
<RecordType>
    <fullName>Group_Health</fullName>
    <active>true</active>
    <businessProcess>Insurance_Renewal_Process</businessProcess>
    <description>Renewal opportunities for Group Health insurance policies.</description>
    <label>Group Health</label>
</RecordType>