force-app/main/default/objects/Opportunity/recordTypes/Health_Insurance.recordType-meta.xml
<RecordType>
    <fullName>Health_Insurance</fullName>
    <active>true</active>
    <businessProcess>Insurance_Renewal_Process</businessProcess>
    <description>Renewal opportunities for Health insurance policies.</description>
    <label>Health</label>
</RecordType>