force-app/main/default/objects/Opportunity/recordTypes/Insurance_Renewal.recordType-meta.xml
<RecordType>
    <fullName>Insurance_Renewal</fullName>
    <active>true</active>
    <businessProcess>Insurance_Renewal_Process</businessProcess>
    <description>Record type for tracking insurance policy renewals. Each renewal references an original Insurance policy and progresses through a renewal-specific stage flow.</description>
    <label>Insurance Renewal</label>
</RecordType>