force-app/main/default/objects/Opportunity/recordTypes/Life_Insurance.recordType-meta.xml
<RecordType>
    <fullName>Life_Insurance</fullName>
    <active>true</active>
    <businessProcess>Insurance_Renewal_Process</businessProcess>
    <description>Renewal opportunities for Life insurance policies.</description>
    <label>Life</label>
</RecordType>