force-app/main/default/objects/Opportunity/recordTypes/Medicare.recordType-meta.xml
<RecordType>
    <fullName>Medicare</fullName>
    <active>true</active>
    <businessProcess>Insurance_Renewal_Process</businessProcess>
    <description>Renewal opportunities for Medicare insurance policies.</description>
    <label>Medicare</label>
</RecordType>