force-app/main/default/objects/Opportunity/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <businessProcess>Insurance_Renewal_Process</businessProcess>
    <description>Renewal opportunities for other insurance policy types.</description>
    <label>Other</label>
</RecordType>