force-app/main/default/objects/Opportunity/listViews/All_Renewals.listView-meta.xml
<ListView>
    <fullName>All_Renewals</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Original_Insurance__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Insurance_End_Date__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Renewal_Outcome__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Renewals</label>
</ListView>