force-app/main/default/objects/Opportunity/listViews/Auto_Home_Renewals_Open.listView-meta.xml
<ListView>
    <fullName>Auto_Home_Renewals_Open</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Original_Insurance__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Insurance_End_Date__c</columns>
    <columns>Customer_Notified_Date__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Auto_Home_Insurance</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <label>Auto/Home Renewals (Open)</label>
</ListView>