force-app/main/default/objects/Opportunity/listViews/Ending_in_Next_2_Months.listView-meta.xml
<ListView>
    <fullName>Ending_in_Next_2_Months</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Original_Insurance__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Insurance_End_Date__c</columns>
    <columns>Customer_Notified_Date__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Insurance_End_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:60</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <label>Ending in Next 2 Months</label>
</ListView>