force-app/main/default/objects/Opportunity/listViews/Lost_Renewals.listView-meta.xml
<ListView>
    <fullName>Lost_Renewals</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Original_Insurance__c</columns>
    <columns>Renewal_Outcome__c</columns>
    <columns>Loss_Reason__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Closed Lost</value>
    </filters>
    <label>Lost Renewals (Closed Lost)</label>
</ListView>