force-app/main/default/objects/Opportunity/listViews/My_Renewals.listView-meta.xml
<ListView>
    <fullName>My_Renewals</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Original_Insurance__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Insurance_End_Date__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Renewal_Outcome__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Renewals</label>
</ListView>