force-app/main/default/objects/Opportunity/listViews/Needs_Customer_Outreach.listView-meta.xml
<ListView>
    <fullName>Needs_Customer_Outreach</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Original_Insurance__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Insurance_End_Date__c</columns>
    <columns>Customer_Notified_Date__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Renewal Identified</value>
    </filters>
    <label>Needs Customer Outreach</label>
</ListView>